tests/compile/derive-no-strategy.stderr
error: expected `=`
 --> $DIR/derive-no-strategy.rs:8:12
  |
8 |     #[merge(strategy)]
  |            ^^^^^^^^^^
